# Initial-PowerFactory-MCP-automation

./: .gitignore  LICENSE  README.md  diagnose_powerfactory_py33.py  mcp_config.example.json  powerfactory_inapp_agent.py  powerfactory_mcp_server.py  powerfactory_mcp_server_bridge.py  pyproject.toml  test_powerfactory_connection.py
.github/workflows/: smoke-test.yml
docs/: ARCHITECTURE.md  SETUP.md  TROUBLESHOOTING.md  WORKFLOWS.md
examples/: n_minus_1_short_circuit_bus_5.csv
scripts/: find_powerfactory_python.ps1
src/powerfactory_mcp/: __init__.py  legacy_py33_bridge.py  server_bridge.py  server_direct.py
tools/: build_innovation_ppt.mjs  generate_innovation_pdf.py
